[package]
name = "clarus"
version = "0.1.0"
authors = ["Raphael O. <raphael.ob@protonmail.com"]
edition = "2021"
repository = "https://github.com/Lockna/clarus"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.13.5"
